@@ -52,26 +52,31 @@ Implement a console-based social networking application (similar to Twitter) sat
 
 ## Building modules from commandline 
 
-Cleaning and recompiling modules in module output folder
++ Cleaning and recompiling modules in module output folder
 
 ```$sh
 rm -rf outcli/*;javac -d outcli --module-source-path src/modules -m domain,presentation,application,infrastructure
 ```
 
-Compile the normal src/main with modules on the classpath
++ Compile the normal src/main with modules on the classpath
 ```$sh
 javac -d out -cp outcli/domain:outcli/application:outcli/infrastructure:outcli/presentation  src/main/java/**/*.java
 ```
 
-Run the java application
++ Run the java application, module path with class path
 
 ```$sh
 java --module-path outcli -cp out --add-modules domain,application,infrastructure,presentation io.tripled.social.client.SocialNetworkApplication
 ```
 
-If the application runs,
++ If the application runs,
 
 ```text
 guido -> toffe jongen
 \q
 ``` 
+
++ Running application without classpath
+```$sh
+java --module-path outcli --add-modules domain,application,infrastructure,presentation io.tripled.social.client.SocialNetworkApplication
+```
